Ansible/manifests/understand/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: understand-dashboard
  namespace: understand
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - understand.peakly.art
      secretName: understand-tls
  rules:
    - host: understand.peakly.art
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: understand-dashboard
                port:
                  number: 80
